--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ humanfriendly = "^10.0"
 black = "^22.8.0"
 isort = "^5.10.1"
 pre-commit = "^2.20.0"
+pytest = "^7.1.3"
 
 [build-system]
 requires = ["poetry-core"]
