--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ black = "^22.8.0"
 isort = "^5.10.1"
 pre-commit = "^2.20.0"
 pytest = "^7.1.3"
+mypy = "^0.982"
+types-requests = "^2.28.11.2"
 
 [build-system]
 requires = ["poetry-core"]
