--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ requests = "^2.28.1"
 colorama = "^0.4.5"
 humanfriendly = "^10.0"
 PySocks = "^1.7.1"
+scapy = "^2.4.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
